--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,55 +1,30 @@
 experiences:
-
-- place: "Stanford"
-  time: "2020 - now"
-  title: "Postdoc"
-  subtitle: "MS&E"
+- place: "Microsoft"
+  time: "Jan 2023 - Present"
+  title: "Micro-intenship"
+  subtitle: "Data Scientist Intern"
   category: "work"
 
-- place: "MIT"
-  time: "2014 - 2020"
-  title: "Ph.D. Student"
-  subtitle: "Media Lab, Laboratory for Social Machines"
+- place: "BioNLP Lab"
+  time: "May 2022 - Aug 2022"
+  title: "Summer Research Assistant"
+  subtitle: "Continuing Research at BioNLP lab"
+  category: "work"
+
+- place: "Bloomberg LP"
+  time: "Jan - May 2022"
+  title: "Graduate Student Researcher"
+  subtitle: "Project: Sequential Sentence Classification for Longer Documents"
+  category: "work"
+
+- place: "University of Massachusetts Amherst"
+  time: "Aug. 2021 - Present"
+  title: "M.S. in Computer Science"
+  subtitle: "BioNLP Lab"
   category: "school"
 
-- place: "Facebook"
-  time: "Summer 2019"
-  title: "Research Scientist, Intern"
-  subtitle: "Core Data Science"
-  category: "work"
-
-- place: "LinkedIn"
-  time: "Summer 2016"
-  title: "Research Scientist, Intern"
-  subtitle: "Experimentation Group"
-  category: "work"
-
-- place: "Amazon"
-  time: "Summer 2014"
-  title: "Machine Learning Scientist, Intern"
-  subtitle: "Scalable Machine Learning Group"
-  category: "work"
-
-- place: "Yahoo! Labs"
-  time: "Feb-Aug 2013"
-  title: "Research Scientist, Intern"
-  subtitle: "Social Media Engagement Group"
-  category: "work"
-
-- place: "EM-DMKM"
-  time: "Sep 2011 – Aug 2013"
-  title: "M.Sc. Student"
-  subtitle: "Masters in Data Mining and Knowledge Management <br/> Year 1: University Pierre et Marie Curie <br/> Year 2: Universitat Politecnica de Catalunya <br/>"
-  category: "school"
-
-- place: "Jozef Stefan Institute"
-  time: "Jan-Aug 2011"
-  title: "Research Assistant"
-  subtitle: "Department of Knowledge Technologies"
-  category: "work"
-
-- place: "Staffordshire University"
-  time: "2007 - 2010"
-  title: "B.Sc. Student"
-  subtitle: "Computing Science <br/> First Class Honours"
+- place: "The College of Wooster"
+  time: "Aug. 2017 - May. 2021"
+  title: "B.A. Student"
+  subtitle: "Computer Science, Mathematics (Double Major) <br/> Magna Cum Laude"
   category: "school"
