--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -17,7 +17,7 @@ experiences:
   subtitle: "Project: Sequential Sentence Classification for Longer Documents"
   category: "work"
 
-- place: "University of Massachusetts Amherst"
+- place: "UMass Amherst"
   time: "Aug. 2021 - Present"
   title: "M.S. in Computer Science"
   subtitle: "BioNLP Lab"
