--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,6 @@
 name: "Minhwa Lee"
-title: "Graduate Student, University of Massachusetts Amherst"
+title: "M.S. Student, University of Massachusetts Amherst "
+dept: "College of Information and Computer Sciences"
 email: "minhwalee [AT] umass.edu"
 profile_pic: "/assets/profile-pics/Minhwa_photo_small.jpeg"
 twitter: "https://twitter.com/minhwa__lee"
