--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,54 +1,48 @@
 projects:
-  - title: "Detecting Network Effects"
-    subtitle: "Randomizing Over Randomized Experiments"
+  - title: "NLP for Social Good"
+    subtitle: "Public health applications of modern NLP"
     thumbnail: "assets/projects/2016_network-ab/thumbnail.jpg"
-    url: "projects/2016_network-ab-testing.html"
+    url: "projects/nlp_for_social_good.html"
     selected: y
 
-  - title: "Human Atlas"
-    subtitle: "Tool for Mapping Social Networks"
+  - title: "Data Science for Public Health"
+    subtitle: "Food Insecurity in the U.S."
     thumbnail: "assets/projects/2016_human-atlas/thumbnail.png"
     url: "projects/2016_human-atlas.html"
     selected: y
 
-  - title: "Responsive Communities"
-    subtitle: "Pilot project in Jun, Spain"
+  - title: "Machine Learning Models for Depressive Disorders"
+    subtitle: "Undergraduate Honors Thesis (2021)"
     thumbnail: "assets/projects/2015_jun/thumbnail.png"
     url: "projects/2015_jun.html"
     selected: y
 
-  - title: "Cold-Start Recommendations"
-    subtitle: "Learning Local Collective Embeddings"
-    thumbnail: "assets/projects/2014_item-cold-start/thumbnail.jpg"
-    url: "projects/2014_item-cold-start.html"
+  - title: "Visual Sense Disambiguation Task"
+    subtitle: "SemEval 2023 Task 1 Challenge"
+    thumbnail: "assets/projects/2015_jun/thumbnail.png"
+    url: "projects/2015_jun.html"
     selected: n
 
-  - title: "Semi-supervised Learning"
-    subtitle: "Iterative Hybrid Algorithm"
-    thumbnail: "assets/projects/2013_iterative-hybrid-algorithm/thumbnail.jpg"
-    url: "projects/2013_iterative-hybrid-algorithm.html"
+  - title: "Sequential Sentence Classification for Longer Documents"
+    subtitle: "Research with Bloomberg LP"
+    thumbnail: "assets/projects/2015_jun/thumbnail.png"
+    url: "projects/2015_jun.html"
     selected: n
 
-  - title: "Twitter Sentiment Analysis"
-    subtitle: "Analyzing Financial Tweets"
-    thumbnail: "assets/projects/2011_twitter-sentiment-analysis/thumbnail.png"
-    url: "projects/2011_twitter-sentiment-analysis.html"
+  - title: "Gender and Power Dynamics in Latin Narratives"
+    subtitle: "Responsible AI Course Project (Fall 22)"
+    thumbnail: "assets/projects/2015_jun/thumbnail.png"
+    url: "projects/2015_jun.html"
     selected: n
 
-  - title: "Wordnet Construction"
-    subtitle: "Automatic Wordnet Construction using Language Models"
-    thumbnail: "assets/projects/2010_wordnet-construction/thumbnail.jpg"
-    url: "projects/2010_wordnet-contruction.html"
+  - title: "Image Captioning with BERT"
+    subtitle: "Neural Networks Course Project (Fall 21)"
+    thumbnail: "assets/projects/2015_jun/thumbnail.png"
+    url: "projects/2015_jun.html"
     selected: n
 
-  - title: "Fingerprint Verification"
-    subtitle: "Image processing class project"
-    thumbnail: "assets/projects/2010_fingerprint-verification/thumbnail.png"
-    url: "projects/2010_fingerprint-verification.html"
-    selected: n
-
-  - title: "Connect Four AI Agent"
-    subtitle: "Iterative deepening and alpha-beta pruning"
-    thumbnail: "assets/projects/2009_connect-four/thumbnail.png"
-    url: "projects/2009_connect-four.html"
+  - title: "Developing a Medical QA chatbot"
+    subtitle: "Advanced NLP Course Project (Fall 21)"
+    thumbnail: "assets/projects/2015_jun/thumbnail.png"
+    url: "projects/2015_jun.html"
     selected: n
