--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -6,43 +6,43 @@ projects:
     selected: y
 
   - title: "Data Science for Public Health"
-    subtitle: "Food Insecurity in the U.S."
+    subtitle: "Food Insecurity in the U.S. (2022)"
     thumbnail: "assets/projects/food_pantry/thumbnail.png"
     url: "projects/food_pantry.html"
     selected: y
 
   - title: "Machine Learning Models for Depressive Disorders"
-    subtitle: "Undergraduate Honors Thesis (2021)"
+    subtitle: "Undergraduate Honors Thesis (2020-2021)"
     thumbnail: "assets/projects/wooster_is/thumbnail.png"
     url: "projects/wooster_is.html"
     selected: y
 
   - title: "Visual Sense Disambiguation Task"
-    subtitle: "SemEval 2023 Task 1 Challenge"
+    subtitle: "SemEval 2023 Task 1 Challenge (2023)"
     thumbnail: "assets/projects/vwsd/thumbnail.png"
     url: "projects/vwsd.html"
     selected: n
 
   - title: "Sequential Sentence Classification for Longer Documents"
-    subtitle: "Research with Bloomberg LP"
+    subtitle: "Research with Bloomberg LP (2022)"
     thumbnail: "assets/projects/ssc/thumbnail.png"
     url: "projects/ssc.html"
     selected: n
 
   - title: "Gender and Power Dynamics in Latin Narratives"
-    subtitle: "Responsible AI Course Project (Fall 22)"
+    subtitle: "Responsible AI Course Project (2022)"
     thumbnail: "assets/projects/gender/thumbnail.png"
     url: "projects/gender.html"
     selected: n
 
   - title: "Image Captioning with BERT"
-    subtitle: "Neural Networks Course Project (Fall 21)"
+    subtitle: "Neural Networks Course Project (2021)"
     thumbnail: "assets/projects/nn_682/thumbnail.png"
     url: "projects/nn_682.html"
     selected: n
 
   - title: "Developing a COVID-19 chatbot"
-    subtitle: "Advanced NLP Course Project (Fall 21)"
+    subtitle: "Advanced NLP Course Project (2021)"
     thumbnail: "assets/projects/nlp_685/thumbnail.png"
     url: "projects/nlp_685.html"
     selected: n
