--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -2,7 +2,7 @@ name: "Minhwa Lee"
 title: "M.S. Student, University of Massachusetts Amherst "
 dept: "College of Information and Computer Sciences"
 email: "minhwalee [AT] umass.edu"
-profile_pic: "/assets/profile-pics/Minhwa_photo_small.jpeg"
+profile_pic: "/assets/profile-pics/Lee.jpg"
 twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
 github: "https://github.com/mimn97"
