update every work

--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -18,9 +18,9 @@ experiences:
   category: "work"
 
 - place: "UMass Amherst"
-  time: "Aug. 2021 - Present"
+  time: "Aug. 2021 - May 2023"
   title: "M.S. in Computer Science"
-  subtitle: "Working at BioNLP Lab (Aug 2021 - Present)"
+  subtitle: "Working at BioNLP Lab (Aug 2021 - May 2023)"
   category: "school"
 
 - place: "The College of Wooster"
