--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -6,5 +6,5 @@ profile_pic: "/assets/profile-pics/GHC_MLee_small.jpeg"
 twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
 github: "https://github.com/mimn97"
-#google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
+google_scholar: "https://scholar.google.com/citations?user=8lhVY7sAAAAJ&hl=en"
 #google_analystics_tracking_id: 'UA-46778883-1'
