--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -7,7 +7,7 @@ papers:
 
   - title: "Vision Meets Definitions: Unsupervised Visual Word Sense Disambiguation Incorporating Gloss Information"
     authors: "Sunjae Kwon, Rishabh Garodia, <b>Minhwa Lee</b>, Zhichao Yang, Hong Yu"
-    venue: "ACL'23: The 61st Annual Meeting of the Association for Computational Linguistics. 2023."
+    venue: "Accepted at ACL'23: The 61st Annual Meeting of the Association for Computational Linguistics. 2023."
     paper_pdf: "https://arxiv.org/pdf/2305.01788.pdf"
     selected: y
 
