--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,12 @@ includes:    ./_includes
 collections:
   projects:
     output: true
+
+
+# Analytics
+analytics:
+  provider               : "google-gtag" 
+                          # false (default), "google", "google-universal", "google-gtag", "custom"
+  google:
+    tracking_id          : "G-1N8ZY2SVV4"
+    anonymize_ip         : # true, false (default)
