--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -27,7 +27,7 @@ papers:
   - title: "Can Pre-trained Models in the Clinical Domain Detect Social and Behavioral Determinants of Health from Tweets?"
     authors: "<b>Minhwa Lee</b>, Zonghai Yao, Zhangqi Duan, Avijit Mitra, Hong Yu"
     venue: "Preprint (Extended Abstract), 2022."
-    selected: y
+    selected: n
 
   # - title: "Perspective-taking to Reduce Affective Polarization on Social Media"
   #   authors: "<b>Martin Saveski<sup>‡</sup></b>, Nabeel Gillani<sup>‡</sup>, Ann Yuan, Prashanth Vijayaraghavan, Deb Roy"
