--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -2,7 +2,7 @@ papers:
 
   - title: "Socio-geographic Disparities in Accessibility to Food Pantries in the United States"
     authors: "<b>Minhwa Lee</b>, Huan-Yuan Chen, Zonghai Yao, Jason B. Gibbons, Yan Wang, Katherine L. Tucker, Hong Yu"
-    venue: "Under Review by Nature Food, 2023."
+    venue: "Under Formal Review by Nature Food, 2023."
     selected: y
 
   - title: "Vision Meets Definitions: Unsupervised Visual Word Sense Disambiguation Incorporating Gloss Information"
