--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,6 +1,6 @@
 name: "Minhwa Lee"
-title: "M.S. Student, University of Massachusetts Amherst "
-dept: "College of Information and Computer Sciences"
+title: "Research Intern, University of Minnesota - Twin Cities"
+dept: "Department of Computer Science and Engineering"
 email: "minhwalee [AT] umass.edu"
 profile_pic: "/assets/profile-pics/GHC_MLee_small.jpeg"
 twitter: "https://twitter.com/minhwa__lee"
