--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,7 +1,7 @@
 experiences:
-- place: "University of Minnesota - Twin Cities"
+- place: "University of Minnesota"
   time: "July 2023 (Expected) - Current"
-  title: "Research Intern"
+  title: "Research Intern at UMN Twin Cities"
   subtitle: "Full-time Research Intern @ Minnesota NLP <br/> (advised by Prof. Dongyeop Kang)"
   category: "work"
 
