--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,6 +1,6 @@
 papers:
 
-  - title: "Socio-geographic Disparities in Accessibility to Food Pantries in the United States"
+  - title: "Socio-geographic Disparities... [Full Title to be disclosed after acceptance]"
     authors: "<b>Minhwa Lee</b>, Huan-Yuan Chen, Zonghai Yao, Jason B. Gibbons, Yan Wang, Katherine L. Tucker, Hong Yu"
     venue: "Under Formal Review by Nature Food, 2023."
     selected: y
