update about info

--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,5 @@
 name: "Minhwa Lee"
-title: "Research Intern, University of Minnesota - Twin Cities"
+title: "Full-time Visiting Researcher, University of Minnesota - Twin Cities"
 dept: "Department of Computer Science and Engineering"
 email: "minhwalee [AT] umass.edu"
 profile_pic: "/assets/profile-pics/GHC_MLee_small.jpeg"
