--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -30,11 +30,11 @@ papers:
     venue: "Honors Thesis at The College of Wooster, 2021."
     paper_pdf: "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8lhVY7sAAAAJ&citation_for_view=8lhVY7sAAAAJ:u-x6o8ySG0sC"
     poster: "/assets/publications/2021_IS/Lee_MAA.pdf"
-    selected: y
+    selected: n
 
   - title: "Local Tweets to Local Health: A Mental Health Surveillance Framework Based on Twitter Data"
-    authors: "Vijeta Deshpande, <b>Minhwa Lee</b>, Zonghai Yao, Jason B. Gibbons, Hong Yu"
-    venue: "Working Paper for JMIR Public Health and Surveillance, 2023"
+    authors: "Vijeta Deshpande, <b>Minhwa Lee</b>, Zonghai Yao, Zihao Zhang, Jason B. Gibbons, Hong Yu"
+    venue: "Under Review by LREC-COLING 2024"
     selected: y
 
   - title: "Can Pre-trained Models in the Clinical Domain Detect Social and Behavioral Determinants of Health from Tweets?"
