--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -26,10 +26,10 @@ papers:
     selected: y
 
   - title: "Socio-geographic Disparities... [Full Title to be disclosed after acceptance]"
-    authors: "<b>Minhwa Lee</b>, Huan-Yuan Chen, Zonghai Yao, Jason B. Gibbons, Yan Wang, Katherine L. Tucker, Hong Yu"
+    authors: "<b>Minhwa Lee</b><sup>‡</sup>, Yifan Zhang<sup>‡</sup>, Huan-Yuan Chen, Zonghai Yao, Jason B. Gibbons, Yan Wang, Katherine L. Tucker, Hong Yu"
     venue: "Under Formal Review by Nature Food, 2023."
     selected: y
-    
+
   - title: "Statistical and Machine Learning Approaches to Depressive Disorders Among Adults in the United States: From Factor Discovery to Prediction Evaluation"
     authors: "<b>Minhwa Lee</b>"
     venue: "Honors Thesis at The College of Wooster, 2021."
