--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,5 +1,14 @@
 papers:
 
+  - title: "Under the Surface: Tracking the Artifactuality of LLM-Generated Data"
+    authors: "Debarati Das<sup>‡</sup>, Karin De Langis<sup>‡</sup>, Anna Martin<sup>‡</sup>, Jaehyung Kim<sup>‡</sup>, <b>Minhwa Lee</b><sup>‡</sup>, Zae Myung Kim<sup>‡</sup>, 
+    Shirley Hayati, Risako Owan, Bin Hu, Ritik Parkar, Ryan Koo, Jonginn Park, Aahan Tyagi, Libby Ferland, Sanjali Roy, Vincent Liu, Dongyeop Kang"
+    venue: "Preprint (2024)"
+    paper_pdf: "https://arxiv.org/pdf/2401.14698.pdf"
+    data: "https://huggingface.co/datasets/minnesotanlp/LLM-Artifacts"
+    code: "https://github.com/minnesotanlp/artifacts-of-llmgendata"
+    selected: y
+
   - title: "How Far Can We Extract Diverse Perspectives from Large Language Models? Criteria-Based Diversity Prompting!"
     authors: "Shirley Anugrah Hayati, <b>Minhwa Lee</b>, Dheeraj Rajagopal, Dongyeop Kang"
     venue: "Preprint (2023)"
@@ -8,7 +17,7 @@ papers:
 
   - title: "Benchmarking Cognitive Biases in Large Language Models as Evaluators"
     authors: "Ryan Koo, <b>Minhwa Lee</b>, Vipul Raheja, Jong Inn Park, Zae Myung Kim, Dongyeop Kang"
-    venue: "Under Review by ICLR 2024"
+    venue: "Preprint (2023)"
     paper_pdf: "https://arxiv.org/pdf/2309.17012.pdf"
     data: "https://minnesotanlp.github.io/cobbler-project-page/"
     selected: y
