--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,5 +1,10 @@
 papers:
 
+  - title: "Local Tweets to Local Health: A Mental Health Surveillance Framework Based on Twitter Data"
+    authors: "Vijeta Deshpande, <b>Minhwa Lee</b>, Zonghai Yao, Zihao Zhang, Jason B. Gibbons, Hong Yu"
+    venue: "To Appear at LREC-COLING 2024"
+    selected: y
+
   - title: "Under the Surface: Tracking the Artifactuality of LLM-Generated Data"
     authors: "Debarati Das<sup>‡</sup>, Karin De Langis<sup>‡</sup>, Anna Martin<sup>‡</sup>, Jaehyung Kim<sup>‡</sup>, <b>Minhwa Lee</b><sup>‡</sup>, Zae Myung Kim<sup>‡</sup>, 
     Shirley Hayati, Risako Owan, Bin Hu, Ritik Parkar, Ryan Koo, Jonginn Park, Aahan Tyagi, Libby Ferland, Sanjali Roy, Vincent Liu, Dongyeop Kang"
@@ -22,10 +27,6 @@ papers:
     data: "https://minnesotanlp.github.io/cobbler-project-page/"
     selected: y
 
-  # - title: "Local Tweets to Local Health: A Mental Health Surveillance Framework Based on Twitter Data"
-  #   authors: "Vijeta Deshpande, <b>Minhwa Lee</b>, Zonghai Yao, Zihao Zhang, Jason B. Gibbons, Hong Yu"
-  #   venue: "Under Review by LREC-COLING 2024"
-  #   selected: n
 
   - title: "Vision Meets Definitions: Unsupervised Visual Word Sense Disambiguation Incorporating Gloss Information"
     authors: "Sunjae Kwon, Rishabh Garodia, <b>Minhwa Lee</b>, Zhichao Yang, Hong Yu"
@@ -44,7 +45,7 @@ papers:
     venue: "Honors Thesis at The College of Wooster, 2021."
     paper_pdf: "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8lhVY7sAAAAJ&citation_for_view=8lhVY7sAAAAJ:u-x6o8ySG0sC"
     poster: "/assets/publications/2021_IS/Lee_MAA.pdf"
-    selected: y
+    selected: n
 
   - title: "Can Pre-trained Models in the Clinical Domain Detect Social and Behavioral Determinants of Health from Tweets?"
     authors: "<b>Minhwa Lee</b>, Zonghai Yao, Zhangqi Duan, Avijit Mitra, Hong Yu"
