--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -2,14 +2,16 @@ papers:
 
   - title: "Benchmarking Cognitive Biases in Large Language Models as Evaluators"
     authors: "Ryan Koo, <b>Minhwa Lee</b>, Vipul Raheja, Jong Inn Park, Zae Myung Kim, Dongyeop Kang"
-    venue: "To Appear at Findings of ACL 2024"
+    venue: "Findings of ACL 2024"
     paper_pdf: "https://arxiv.org/pdf/2309.17012.pdf"
     data: "https://minnesotanlp.github.io/cobbler-project-page/"
     selected: y
 
   - title: "Human-AI Collaborative Taxonomy Construction: A Case Study of Profession-specific Writing Assistants"
     authors: "<b>Minhwa Lee</b>, Zae Myung Kim, Vivek A. Khetan, Dongyeop Kang"
-    venue: "To Appear at The Third In2Writing Workshop at CHI 2024"
+    venue: "The Third In2Writing Workshop at CHI 2024"
+    paper_pdf: "https://arxiv.org/abs/2406.18675"
+    code: "https://github.com/minnesotanlp/co-taxonomy"
     selected: y
 
   - title: "Local Tweets to Local Health: A Mental Health Surveillance Framework Based on Twitter Data"
