--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,8 +1,7 @@
 name: "Minhwa Lee"
-title: "Full-time Visiting Researcher, University of Minnesota - Twin Cities"
-dept: "Department of Computer Science and Engineering"
+title: "Research Staff, University of Massachusetts Amherst - Lowell"
 email: "minhwalee [AT] umass.edu"
-profile_pic: "/assets/profile-pics/GHC_MLee_small.jpeg"
+profile_pic: "/assets/profile-pics/profile_minhwa_latest.jpg"
 twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
 github: "https://github.com/mimn97"
