--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,8 +1,8 @@
 experiences:
-- place: "University of Massachusetts Lowell"
-  time: "August 2024 - Current"
-  title: "Research Staff at University of Massachusetts (Amherst - Lowell)"
-  subtitle: "Research Data Scientist @ UMass"
+- place: "University of Massachusetts"
+  time: "Aug 2024 - Current"
+  title: "Research Staff at UMass (Amherst - Lowell)"
+  subtitle: "BioNLP Lab"
   category: "work"
 
 - place: "University of Minnesota"
