--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,10 @@
 name: "Minhwa Lee"
-title: "Research Staff, University of Massachusetts Amherst - Lowell"
-email: "minhwalee [AT] umass.edu"
+title: "Research Staff, University of Massachusetts Lowell"
+email: "minhwalee [AT] umass.edu / minhwa_lee1@uml.edu"
 profile_pic: "/assets/profile-pics/profile_minhwa_latest_300.jpg"
 twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
 github: "https://github.com/mimn97"
 google_scholar: "https://scholar.google.com/citations?user=8lhVY7sAAAAJ&hl=en"
+word: "May I be a blessing to whomever I meet.."
 #google_analystics_tracking_id: 'UA-46778883-1'
