--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,7 +1,7 @@
 name: "Minhwa Lee"
 title: "Research Staff, University of Massachusetts Lowell"
 email: "minhwalee [AT] umass.edu / minhwa_lee1@uml.edu"
-profile_pic: "/assets/profile-pics/profile_minhwa_latest_300.jpg"
+profile_pic: "/assets/profile-pics/Minhwa_Dec24.jpeg"
 twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
 github: "https://github.com/mimn97"
