--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -6,5 +6,5 @@ twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
 github: "https://github.com/mimn97"
 google_scholar: "https://scholar.google.com/citations?user=8lhVY7sAAAAJ&hl=en"
-#word: "May I be a blessing to whomever I meet.."
+word: "On the job market for AI Research Engineers in the US!"
 #google_analystics_tracking_id: 'UA-46778883-1'
