--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,5 @@
 name: "Minhwa Lee"
-title: "Generative AI Engineer, CitiusTech"
+title: "Generative AI Engineer @ CitiusTech"
 email: "minhwalee [AT] umass.edu"
 profile_pic: "/assets/profile-pics/Minhwa_Jan25.jpeg"
 twitter: "https://twitter.com/minhwa__lee"
