--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,6 +1,6 @@
 name: "Minhwa Lee"
 title: "Generative AI Engineer @ Mayo Clinic"
-email: "minhwalee [AT] umass.edu"
+email: "lee.minhwa [AT] mayo.edu"
 profile_pic: "/assets/profile-pics/Minhwa_Jan25.jpeg"
 twitter: "https://twitter.com/minhwa__lee"
 linkedin: "https://www.linkedin.com/in/minhwalee"
